# win-kexp

./: .cursorrules  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  TOKEN_STEALING_ARM64.md  build.rs
.cursor/rules/: shellcode-assembly.mdc  win-kexp.mdc
.github/: dependabot.yml
.github/workflows/: ci.yml  claude-code-review.yml  coverage.yml  miri.yml
examples/: kdtest.rs
src/: acl_edit.asm  dbgeng.rs  lib.rs  pool.rs  pool_extension.rs  process.rs  rop.rs  shellcode.rs  token_stealing.asm  util.rs  win32k.rs
src/asm/: acl_edit.asm  acl_edit_arm64.asm  spawn_cmd.asm  spawn_cmd_arm64.asm  token_stealing_arm64.asm  token_stealing_shellcode_smep_no_kvashadow.asm  token_stealing_shellcode_smep_no_kvashadow_pte.asm
src/pool/: decode.rs  index.rs  layout.rs  render.rs  snapshot.rs
