[package]
name = "win-kexp"
version = "0.1.0"
edition = "2021"

[features]
shellcode_fallback = []

[dependencies]
byte-strings = "0.3.1"
goblin = "0.9.3"
hex = "0.4.3"
thiserror = "2.0.12"
windows-core = "0.61.0"
windows-strings = "0.4.0"

[dependencies.windows]
version = "0.61.1"
features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Storage_FileSystem",
    "Win32_System_Com",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Diagnostics_Debug_Extensions",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_LibraryLoader",
    "Win32_System_Memory",
    "Win32_System_Pipes",
    "Win32_System_ProcessStatus",
    "Win32_System_Ioctl",
    "Win32_System_IO",
    "Win32_System_SystemInformation",
    "Win32_System_SystemServices",
    "Win32_System_Threading",
]
